--- a/regcss.css
+++ b/regcss.css
@@ -1,12 +1,18 @@
 *{box-sizing: border-box;}
 .register {
+    text-align: center;
     font-family:'Courier New', Courier, monospace ;
     margin-top: 15px;
+    margin-left: 15%;
+    margin-right: 15%;
 }
 h1{
     text-align: center;
 }
 p{
+    text-align: center;
+}
+ul{
     text-align: center;
 }
 input{
