--- a/regcss.css
+++ b/regcss.css
@@ -6,6 +6,9 @@
     margin-left: 15%;
     margin-right: 15%;
 }
+a{
+    text-align: center;
+}
 h1{
     text-align: center;
 }
@@ -19,15 +22,18 @@ input{
     width: 100%;
     border: 1px;
     padding: 10px;
-    background: rgb(171, 171, 171);
+    background: rgb(235, 231, 231);
     display: inline-block;
     margin: 10px,0px,0px,10px;
     
 }
+.nav{
+    text-align: center;
+}
 .regbutton{
-    background-color: rgb(148, 199, 190);
-    color: rgb(31, 56, 56);
-    opacity: 0.9;
+    background-color: rgb(77, 107, 155);
+    color: rgb(28, 48, 48);
+    opacity: 0.8;
     border: 0cap;
     width: 100%;
     height: 40px;
@@ -35,8 +41,20 @@ input{
     
 }
 .regbutton:hover{
-    opacity: 1;
+    opacity: 0.9;
 }
 .regbutton:active{
-    border-style: outset ;
+    opacity: 1;
+}
+.bgcolor{
+    position: absolute;
+    left: 50%;
+    margin-left: -40%;
+    width: 80%;
+    min-width: 20px;
+    background-color: rgb(139, 207, 166);
+    height: 480px;
+    z-index: -1;
+    margin-top: 80px;
+    border-radius: 23px;
 }
